--- a/config/database.yml
+++ b/config/database.yml
@@ -73,7 +73,13 @@ test:
 # URL environment variable explicitly:
 #
 production:
+  <<: *default
   url: <%= ENV["DATABASE_URL"] %>
+
+  cable:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
+    migrations_paths: db/cable_migrate
 #
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
